<resources>
<string name="app_name">Lab 7</string>
<string name="hello_message">Hello World!</string>
<string name="ButtonText">I\’m a button</string>

<string name="Login">Login</string>
<string name="Login_message">email@gmail.com</string>
<string name="password_message">Password</string>
<string name="textPassword">textPassword</string>
<string name="CheckBox">ZZZZ</string>
<string name="RadioButton">RadioButton</string>
<string name="Switch">what DOES it do?!?</string>
<string name="Button">LoginButton</string>
<string name="ic_menu_camera">Camera</string>

<string name="dialog_message">Do you want to finish this activity</string>
<string name="dialog_title">CheckBox</string>
<string name="ok">OK</string>

<string name="Button2Text">Start Chat</string>
<string name="Button3Text">Weather Forecast</string>

<string name="cTemp">Current Temperature</string>
<string name="MaxTemp">Max Temperature</string>
<string name="MinTemp">Min Temperature</string>
<string name="WeatherImage">Weather Image</string>


<string name="messageId">Message ID</string>
<string name="deleteB">DELETE THIS MESSAGE</string>
<string name="tMessage">Text Message</string>

<string name="button_send">SEND</string>

<string name="title_activity_test_toolbar">TestToolbar</string>
<string name="title_activity_test_tool_bar">TestToolBar</string>
<string name="action_settings">Settings</string>
<string name="action_one">Option 1</string>
<string name="action_two">Option 2</string>
<string name="action_three">Option 3</string>
<string name="my_toolbar">Settings</string>
<string name="testToolBar">test Toolbar</string>
<string name="about">About</string>
<string name="cancel">CANCEL</string>
<string name="title">Do you want to go back?</string>
<string name="newMessage"> </string>
<string name="icons8_intelligence_50"> </string>
</resources>
