<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView3"
        android:layout_marginBottom="27dp"
        android:layout_toEndOf="@+id/textView2"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/cTemp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="51dp"
        android:layout_toStartOf="@+id/textView1"
        android:text="@string/MinTemp"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="104dp"
        android:text="@string/MaxTemp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="63dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/WeatherImage" />


</RelativeLayout>